gccida/c1/declare_weak
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/declare_weak/src/varasm.c:5549:25: error: use of undeclared identifier 'off_6E2FF0'
error_with_decl( decl, &off_6E2FF0[4]); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/declare_weak/src/obj/varasm.o] Error 1
